# Features

./: CMakeLists.txt  main.cpp
lib/: Point.h  cerestypes.h  displayer.h  frame.h  keyframe.h  map.h  maths.h  point.h  slam.h
old/lib/: keyframe.h  maths.h  optimization.h
old/src/: cerestypes.cpp  keyframe.cpp  optimization.cpp
src/: Point.cpp  displayer.cpp  frame.cpp  keyframe.cpp  map.cpp  maths.cpp  optimization.cpp  point.cpp  slam.cpp
